--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "@mui/material": "^6.1.7",
     "@mui/x-data-grid": "^7.22.2",
     "react-hook-form": "^7.30.0",
-    "@refinedev/react-router": "^1.0.0",
-    "node-fetch": "^2.6.7",
-    "form-data": "^4.0.0"
+    "@refinedev/react-router": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
